# CrossClass

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.ci/: build-debug.sh  build.sh  install_dependencies.sh  test.sh  valgrind_test.sh
.github/workflows/: pr-build.yml
Examples/: Person.ccd
src/: data_parser.c  data_parser.h  data_reader.c  data_reader.h  line_data_list.c  line_data_list.h  main.c  version.c  version.h
src/Commands/: command.c  command.h  command_list.c  command_list.h
src/Commands/HelpCommand/: help_command.c  help_command.h
src/Commands/ParseFileCommand/: parse_file_command.c  parse_file_command.h
src/Commands/VersionCommand/: version_command.c  version_command.h
src/Data/: class.h  class_info.h  field.h  line_data.c  line_data.h  version.h
src/Data/Tokens/: data_type.h  equality_type.h  object_type.h  store_type.h  tokens.h  type.h  visability.h  visibility.h
src/DataParser/: data_parser.c  data_parser.h  data_parser_result.c  data_parser_result.h
src/DataParser/Parsers/ClassDataParsers/: class_data_parser.c  class_data_parser.h
src/Reader/: class_reader.c  class_reader.h  token_stack.c  token_stack.h
tests/: test.c
tests/Unit/: test.c
tests/Unit/command_tests/: command_tests.c  command_tests.h
tests/Unit/data_parser_tests/class_data_parser_tests/: class_data_parser_tests.h
tests/Unit/line_data_list_tests/: line_data_list_tests.h
tests/data_parser_tests/: data_parser_tests.c  data_parser_tests.h
tests/data_parser_tests/class_data_parser_tests/: class_data_parser_tests.c
tests/data_reader_tests/: data_reader_tests.c  data_reader_tests.h  test.ccd
tests/line_data_list_tests/: line_data_list_tests.c  line_data_list_tests.h
tests/line_data_tests/: line_data_tests.c  line_data_tests.h
